feat(expense): allow user to register expense
